# TT-Minimal-CMake

./: .gitignore  CMakeLists.txt  README.md  example.cpp
cmake/: dependencies.cmake
kernels/: loopback_dram_copy.cpp
